# matrix

./: .env.example  .gitignore  .gitmodules  .gitnexusignore  .mcp.json  AGENTS.md  AUTORESEARCH_ANALYSIS.md  Addition.txt  CLAUDE.md  COHERE_TRANSCRIBE_ANALYSIS.md  Copilotkit_additional.md  GRAPH_DB_COMPARISON.md  KG_EMBEDDINGS_RESEARCH.md  MOBILE-TEST.md  MOLMOWEB_ANALYSIS.md  Memory_with_Uncertainty  PHANTOMTIDE_ANALYSIS.md  PILOT_MCP_ANALYSIS.md  Slice12.txt  Superpowers_TestTimeCompute.md  Tunneling.txt  Z_Additional_For_Tool_Stuff.md  Z_Browser_RAG_WebGPU_CPU_Models.md  Z_Chatgpt_Chronicles vs DeepseekOCRpaper.md  Z_Hermes_Desktop_claw3d.md  Z_Prompt_Cache.md  Z_Semantik_layer and so on.md  Z_Tool_very interessting Quarkdown.md  Z_matrix_widgets_formulars_and so on.md  docker-compose.memory-eval.yml  docker-compose.otel.yml  docker-compose.yml  env-architecture-analysis.md  exec_updates_2026-04-16.md  matrixchat_agentchat.txt  memory_kg.md  otel-collector.yaml  package.json  podman.md  podman_lifehacks.md  (+3 more)
_ref/auto-rag-optimizer/: .env.example  .gitignore  README.md  README_LOCAL.md  SOURCE.md  best_config.json  config.json  evaluator.py  orchestrator.py  pyproject.toml  rag_pipeline.py  requirements.txt  research_log.md  run_experiments.py  test_questions.jsonl  visualizer.py
python-agent-bridge/: .env.example  Dockerfile  pyproject.toml
python-agent-bridge/agent_bridge/: app.py  config.py
python-agent-bridge/matrix_agent_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-agent-bridge/scripts/: register_bot.py
python-agent-bridge/tests/: test_config.py
python-backend/: .env.example  CODE_REVIEW.md  alembic.ini  pyproject.toml  pyproject.toml.bak-1776261332  pyrightconfig.json
python-backend/.basedpyright/: baseline.json
python-backend/.tmp/: fusion-postgres-shared.json  fusion-shared.json  hindsight-shared.json  long-context-smoke.json  mempalace-shared.json  pre-fusion-suite.json  suite-shared.json
python-backend/.tmp/mempalace_runtime_smoke/: chroma.sqlite3
python-backend/agent/: app.py  consent_policy.yaml  context.py  context_assembler.py  errors.py  extensions.py  guards.py  langfuse_tracker.py  llm_client.py  llm_helper.py  loop.py  loop_guards.py  mcp_server.py  mcp_traces.py  pyproject.toml  roles.py  runtime_events.py  search.py  sessions.py  startup_migrations.py  state_store.py  streaming.py  temporal_context.py  tracing.py  working_memory.py
python-backend/agent/a2a/: agent_card.py  client.py  store.py
python-backend/agent/a2ui/: __init__.py  emitter.py
python-backend/agent/audit/: __init__.py  logger.py  store.py
python-backend/agent/billing/: insights.py  usage_pricing.py
python-backend/agent/consent/: __init__.py  cache.py  config.py  provider.py  rate_limiter.py
python-backend/agent/control/: __init__.py  a2a.py  agents.py  audit.py  cache_impact.py  context.py  context_runtime.py  episodes.py  highlights.py  ingestion.py  kg_context.py  kg_crud.py  mcp.py  memory.py  models.py  ops.py  overview.py  permissions.py  prompt_cache.py  reports.py  request_scope.py  router.py  sandbox.py  security.py  semantic.py  sessions.py  skills.py  system.py  tools.py  user_llm.py  widgets.py
python-backend/agent/graph/: __init__.py  agent_graph.py  (+3 more)
python-backend/alembic/: env.py  script.py.mako
python-backend/archive/: README.md
python-backend/bridge/: __init__.py  agent_client.py  app.py  config.py  matrix_client.py  nats_handler.py  pyproject.toml
python-backend/compute/: pyproject.toml
python-backend/context/: README.md  __init__.py  context_engine.py  merge.py  policy.py  relevance.py  token_budget.py
python-backend/extraction_layout/: README.md  __init__.py  pyproject.toml  worker.py
python-backend/ingestion/: .env.example  __init__.py  cli.py  pyproject.toml  worker.py
python-backend/kg_pipeline/: README.md  __init__.py  cli.py  pyproject.toml  server.py
python-backend/litellm-gateway/: config.yaml  pyproject.toml
python-backend/memory_engine/: README.md  __init__.py  episodic_store.py  global_kg.py  global_kg_store.py  kg_store.py  kg_validation.py  models.py  pyproject.toml  seed_data.py  vector_store.py
python-backend/memory_fusion/: README.md  __init__.py  access_policy.py  coherence.py  decay.py  embeddings.py  engine.py  evidence_trace.py  fusion_engine.py  loci.py  memory_provider.py  mempalace_engine.py  observation_skills.py  operation_logging.py  providers.py  query_gate.py  runtime_env.py  semantic_feedback.py  semantics.py  summary_builder.py
python-backend/meta_harness/: __init__.py  config.py  contract_suite.py  decisions.py  domain_contract.py  evaluator.py  extraction_benchmark.py  inner_loop.py  knowledge_contract.py  matrix_widget_policy.py  mcp_catalog_policy.py  memory_context_smoke.py  meta_cli.py  mode_analysis.py  outer_loop.py  pareto.py  prompt_cache_contract.py  proposer.py  provider_smoke.py  real_outer_loop.py  report_grounding.py  retrieval_benchmark.py  routing_contract.py  runtime_preflight.py  scenario_runner.py  scorer.py  skill_lifecycle_contract.py
python-backend/mock/: mock_agent.py  pyproject.toml
python-backend/reports/: __init__.py  contract.py
python-backend/retrieval/: README.md  __init__.py  api.py
python-backend/rust_core/: Cargo.toml
python-backend/scripts/: export_trajectories.py  live_prompt_cache_probe.py  opensandbox_cli.py  persist_memory_ab_eval.py  refine_skills_offline.py  schema_inventory.py  seed_agent_skills.py  skill_trigger_quality.py  sync-all.sh
python-backend/semantic_layer/: __init__.py  catalog.py
python-backend/shared/: __init__.py  app_factory.py  cache_adapter.py  config.py
python-backend/tests/: test_context_engine.py  test_global_kg.py  test_global_kg_store.py  test_ingestion_source_artifact_migration_static.py  test_kg_claim_migration_static.py  test_kg_validation.py  test_memory_kg_store.py  test_memory_provider.py  test_memory_vector_store.py  test_retrieval_baseline.py  test_retrieval_benchmark_lab.py  test_schema_governance.py
python-backend/voice/: README.md  pipeline.py  providers.py  pyproject.toml  worker.py
(+2720 files in other folders)
