[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["agent*", "bridge*", "memory_engine*", "context*", "voice*", "mock*"]

[project]
name = "matrix-python-backend"
version = "0.1.0"
description = "Konsolidiertes Python Backend — Agent Service + Matrix Bridge + Voice AI + Mock"
requires-python = ">=3.11"
dependencies = [
    # ── HTTP Framework ──────────────────────────────────────────────────────
    "fastapi==0.116.1",
    "pydantic>=2.0",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",

    # ── LLM SDKs — provider-agnostic (aus Hauptprojekt) ────────────────────
    # AGENT_PROVIDER=anthropic (default) | openai | openai-compatible
    #   openai-compatible: OpenRouter, Ollama, vLLM, LM Studio, Azure
    #   set OPENAI_BASE_URL (z.B. http://localhost:11434/v1 fuer Ollama)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Multi-Provider LLM Router: ein API fuer alle Provider
    # Aktiviert via AGENT_USE_LITELLM=true
    "litellm>=1.50.0",
    # Structured LLM Output: Pydantic Wrapper fuer Tool-Call Parsing
    "instructor>=1.3.0",

    # ── Matrix Client (Bridge) ──────────────────────────────────────────────
    # matrix-nio: async, sans-I/O
    # kein [e2e] — Go Appservice uebernimmt E2EE (Option C)
    "matrix-nio>=0.24.0",

    # ── Message Queue (NATS — Go Appservice Koordination) ──────────────────
    "nats-py>=2.7.0",

    # ── Cache / State ───────────────────────────────────────────────────────
    "redis>=5.0.0",
    "cachetools>=5.3.0",

    # ── Memory Service (Port 8093) — spaeterer Slice ────────────────────────
    # KG: KuzuDB, Vector: ChromaDB/LanceDB, Embeddings: sentence-transformers
    # Auskommentiert bis Memory Service aktiviert wird
    # "kuzu>=0.7.0",
    # "chromadb>=0.5.0",
    # "sentence-transformers>=3.0.0",
    # "lancedb>=0.6.0",
    # "psycopg[binary]>=3.2.0",

    # ── Voice AI Pipeline (LiveKit Agents) ──────────────────────────────────
    # Provider-agnostisch: STT/TTS/LLM via ENV umschaltbar
    # AGENT_STT_PROVIDER = whisper-local | openai
    # AGENT_TTS_PROVIDER = piper | openai | kokoro
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero>=1.0.0",     # VAD (Voice Activity Detection)

    # STT: Open Source (Default)
    "faster-whisper>=1.0.0",
    # TTS: Open Source (Default)
    "piper-tts>=1.0.0",

    # STT/TTS: OpenAI als optionaler Cloud-Provider
    "livekit-plugins-openai>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "basedpyright>=1.34.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
exclude = [".venv", ".venv/**", "data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

# ─── Environment Variables ──────────────────────────────────────────────────
#
# LLM:
#   AGENT_PROVIDER      = anthropic | openai | openai-compatible  (default: anthropic)
#   AGENT_MODEL         = model id override
#   ANTHROPIC_API_KEY   — required fuer AGENT_PROVIDER=anthropic
#   OPENAI_API_KEY      — required fuer AGENT_PROVIDER=openai/openai-compatible
#   OPENAI_BASE_URL     — z.B. http://localhost:11434/v1 (Ollama)
#   AGENT_USE_LITELLM   = true | false (default: false)
#
# Voice:
#   AGENT_STT_PROVIDER  = whisper-local | openai        (default: whisper-local)
#   AGENT_TTS_PROVIDER  = piper | openai | kokoro       (default: piper)
#
# Services:
#   LIVEKIT_URL         = ws://localhost:7880
#   LIVEKIT_API_KEY     = devkey
#   LIVEKIT_API_SECRET  = your-livekit-secret
#
# ─── Start ──────────────────────────────────────────────────────────────────
#
# Agent Service:     uv run uvicorn agent.app:app --port 8094
# Bridge Service:    uv run uvicorn bridge.app:app --port 8097
# Mock Agent:        uv run python -m mock.mock_agent
# Voice Worker:      uv run python -m voice.worker
# Memory Service:    uv run uvicorn memory.app:app --port 8093 (spaeterer Slice)
#
# Bot registrieren:  uv run python scripts/register_bot.py
