[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["agent*", "bridge*", "memory_engine*", "context*", "voice*", "mock*"]

[project]
name = "matrix-python-backend"
version = "0.1.0"
description = "Konsolidiertes Python Backend — Agent Service + Matrix Bridge + Voice AI + Mock"
requires-python = ">=3.11"
dependencies = [
    # ── HTTP Framework ──────────────────────────────────────────────────────
    "fastapi>=0.120.3",
    "pydantic>=2.0",
    "uvicorn>=0.38.0",
    "httpx==0.28.1",
    "python-dotenv>=1.1.0",
    # ── LLM SDKs — provider-agnostic (aus Hauptprojekt) ────────────────────
    # AGENT_PROVIDER=anthropic (default) | openai | openai-compatible
    #   openai-compatible: OpenRouter, Ollama, vLLM, LM Studio, Azure
    #   set OPENAI_BASE_URL (z.B. http://localhost:11434/v1 fuer Ollama)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Multi-Provider LLM Router: ein API fuer alle Provider
    # Aktiviert via AGENT_USE_LITELLM=true
    "litellm>=1.50.0",
    # Structured LLM Output: Pydantic Wrapper fuer Tool-Call Parsing
    "instructor>=1.3.0",
    # ── Message Queue (NATS — Go Appservice Koordination) ──────────────────
    # Bridge empfängt Matrix-Messages von Go Appservice via NATS (E2BE-Pattern).
    # matrix-nio entfernt — Go ist einziger Matrix-Endpunkt (exec-05).
    "nats-py>=2.7.0",
    # ── MCP Server (Model Context Protocol — exec-09) ──────────────────────
    # FastMCP Server exponiert TradingTools als standardisierte MCP Tools
    "mcp>=1.26.0",
    # ── LangGraph (Multi-Agent Orchestrierung — exec-10) ──────────────────
    # StateGraph, Sub-Graphs, Checkpointing, Human-in-the-Loop
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    # ── Hindsight Memory Engine (exec-11) ──────────────────────────────────
    # Agent Memory: 4 Networks, Retain/Recall/Reflect/Consolidate
    # MIT, 91.4% LongMemEval, PostgreSQL+pgvector
    # slim = BYOE (Bring Your Own Embeddings/Reranker/DB)
    "hindsight-api-slim>=0.4.17",
    # ── Security (exec-16: Key Encryption) ──────────────────────────────────
    # AES-256-GCM fuer API Key Encryption at rest (DB)
    # Cross-language kompatibel mit Go internal/keyvault/
    "cryptography>=44.0.0",
    # ── Cache / State ───────────────────────────────────────────────────────
    "redis>=5.0.0",
    "cachetools>=5.3.0",
    # ── Memory Service (Port 8093) — spaeterer Slice ────────────────────────
    # KG: KuzuDB, Vector: ChromaDB/LanceDB, Embeddings: sentence-transformers
    # Auskommentiert bis Memory Service aktiviert wird
    # "kuzu>=0.7.0",
    # "chromadb>=0.5.0",
    # "sentence-transformers>=3.0.0",
    # "lancedb>=0.6.0",
    "psycopg[binary]>=3.2.0", # Audit Logging (exec-12) + eigene Alembic Migrationen
    # ── Voice AI Pipeline (LiveKit Agents) ──────────────────────────────────
    # Provider-agnostisch: STT/TTS/LLM via ENV umschaltbar
    # AGENT_STT_PROVIDER = whisper-local | openai
    # AGENT_TTS_PROVIDER = piper | openai | kokoro
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero>=1.0.0", # VAD (Voice Activity Detection)
    # STT: Open Source (Default)
    "faster-whisper>=1.0.0",
    # TTS: Open Source (Default)
    "piper-tts>=1.0.0",
    # STT/TTS: OpenAI als optionaler Cloud-Provider
    "livekit-plugins-openai>=1.0.0",
    "sentence-transformers>=5.3.0",
    "langgraph-checkpoint-postgres>=3.0.5",
    # ── Sandbox Code Execution (exec-12 Phase 1) ──────────────────────────
    # OpenSandbox: Alibaba, Apache 2.0, CNCF Landscape
    # Isolierte Code-Execution fuer LLM-generierten Code (Data Analysis, Backtesting)
    "opensandbox>=0.1.6",
    "opensandbox-code-interpreter>=0.1.2",
    # ── OpenTelemetry (exec-17: Observability) ──────────────────────────────
    # Opt-in via OTEL_ENABLED=true — see shared/app_factory.py
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    # ── Langfuse (exec-17 Phase 3: LLM Observability) ──────────────────────
    # Opt-in via LANGFUSE_ENABLED=true — see agent/langfuse_tracker.py
    "langfuse>=2.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "basedpyright>=1.34.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
exclude = [".venv", ".venv/**", "data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N999"]  # N999: false positive wegen Verzeichnisname python-backend

# ─── Environment Variables ──────────────────────────────────────────────────
#
# LLM:
#   AGENT_PROVIDER      = anthropic | openai | openai-compatible  (default: anthropic)
#   AGENT_MODEL         = model id override
#   ANTHROPIC_API_KEY   — required fuer AGENT_PROVIDER=anthropic
#   OPENAI_API_KEY      — required fuer AGENT_PROVIDER=openai/openai-compatible
#   OPENAI_BASE_URL     — z.B. http://localhost:11434/v1 (Ollama)
#   AGENT_USE_LITELLM   = true | false (default: false)
#
# Voice:
#   AGENT_STT_PROVIDER  = whisper-local | openai        (default: whisper-local)
#   AGENT_TTS_PROVIDER  = piper | openai | kokoro       (default: piper)
#
# Services:
#   LIVEKIT_URL         = ws://localhost:7880
#   LIVEKIT_API_KEY     = devkey
#   LIVEKIT_API_SECRET  = your-livekit-secret
#
# ─── Start ──────────────────────────────────────────────────────────────────
#
# Agent Service:     uv run uvicorn agent.app:app --port 8094
# Bridge Service:    uv run uvicorn bridge.app:app --port 8097
# Mock Agent:        uv run python -m mock.mock_agent
# Voice Worker:      uv run python -m voice.worker
# Memory Service:    uv run uvicorn memory.app:app --port 8093 (spaeterer Slice)
#
# Bot registrieren:  uv run python scripts/register_bot.py
