#
# PORT-NOTIZ (tradeview-fusion — beim Reverse-Port anzuwenden)
# ═════════════════════════════════════════════════════════════════════════════
# Im matrix-Isolationsprojekt ist `agent/` Workspace-Member von python-backend/
# → lebt im shared `python-backend/.venv`. `dependencies = []` weil alle Deps
# vom Workspace-Root geerbt werden.
#
# BEIM PORT ins Hauptprojekt (tradeview-fusion):
#   1. `agent/` aus `python-backend/pyproject.toml` `[tool.uv.workspace].members`
#      rausnehmen.
#   2. `dependencies = [...]` unten aktivieren (Kommentar entfernen) —
#      copy-paste-fertig aus python-backend/pyproject.toml extrahiert.
#   3. `cd agent && uv sync` → eigenes `agent/.venv` (~3–4 GB).
#   4. Agent wird eigenständig deploy-bar als Service (Port 8094 + gRPC 9094).
#
# Begründung: matrix = Isolated-Test-Env, agent nicht separat deployed. In
# tradeview-fusion = eigener Service → Isolation lohnt sich.
# Siehe: matrix/specs/18-python-backend-workspace-refactor.md (Abschnitt
# "Agent-Isolation beim Port") + matrix/specs/10-portierung.md.
#
# ZU AKTIVIERENDE DEPS (copy zwischen die [] unter [project].dependencies):
# -----------------------------------------------------------------------------
#    # ── HTTP Framework (shared base) ────────────────────────────────────────
#    "fastapi>=0.120.3",
#    "pydantic>=2.0",
#    "uvicorn>=0.38.0",
#    "httpx==0.28.1",
#    "python-dotenv>=1.1.0",
#    # ── LLM SDKs (provider-agnostic) ────────────────────────────────────────
#    "anthropic>=0.40.0",
#    "openai>=1.50.0",
#    "litellm>=1.50.0",
#    "instructor>=1.3.0",
#    # ── Message Queue (NATS — Go Appservice) ────────────────────────────────
#    "nats-py>=2.7.0",
#    # ── MCP (Model Context Protocol) ────────────────────────────────────────
#    "mcp>=1.26.0",
#    # ── LangGraph (Multi-Agent Orchestrierung) ──────────────────────────────
#    "langgraph>=0.4.0",
#    "langchain-core>=0.3.0",
#    "langgraph-checkpoint-postgres>=3.0.5",
#    # ── Hindsight Memory Engine ─────────────────────────────────────────────
#    "hindsight-api-slim>=0.4.17",
#    "sentence-transformers>=5.3.0",
#    # ── Security (AES-256-GCM Key Encryption) ───────────────────────────────
#    "cryptography>=44.0.0",
#    # ── Cache / State / DB ──────────────────────────────────────────────────
#    "redis>=5.0.0",
#    "cachetools>=5.3.0",
#    "psycopg[binary]>=3.2.0",
#    # ── Sandbox Code Execution (OpenSandbox) ────────────────────────────────
#    "opensandbox>=0.1.6",
#    "opensandbox-code-interpreter>=0.1.2",
#    # ── Observability: OpenTelemetry ────────────────────────────────────────
#    "opentelemetry-api>=1.25.0",
#    "opentelemetry-sdk>=1.25.0",
#    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
#    "opentelemetry-instrumentation-fastapi>=0.46b0",
#    "opentelemetry-instrumentation-httpx>=0.46b0",
#    # ── Observability: Langfuse (LLM-Tracing) ───────────────────────────────
#    "langfuse>=2.40.0",
#
# NICHT hier (gehören in andere Pakete):
#    livekit-agents, livekit-plugins-*, faster-whisper, piper-tts  → voice/pyproject.toml
#    pymupdf4llm, docling, marker-pdf                              → ingestion / extraction_layout
#    torch                                                          → kg_pipeline / extraction_layout
# ═════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-agent"
version = "0.1.0"
description = "Agent Service — LangGraph Orchestration, LLM Routing, MCP Tools, Memory"
requires-python = ">=3.11"
dependencies = []  # siehe PORT-NOTIZ oben — beim Port ersetzen

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["agent*"]
