[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-bridge"
version = "0.1.0"
description = "Matrix Bridge — NATS Consumer, Message Routing zu Go Appservice"
requires-python = ">=3.11"
dependencies = []  # erbt shared-base (nats-py, cryptography, psycopg) aus python-backend/

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["bridge*"]
