[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kg_pipeline*"]

[project]
name = "matrix-kg-pipeline"
version = "0.1.0"
description = "Matrix KG Extraction Pipeline (lightweight base, optional ML extractors)"
requires-python = ">=3.11,<3.13"
dependencies = [
    # ── Web Framework ──────────────────────────────────────────────────────
    "fastapi>=0.120",
    "uvicorn>=0.38",
    "pydantic>=2.0",
    "httpx==0.28.1",
    # ── Database ───────────────────────────────────────────────────────────
    "psycopg[binary]>=3.2.0",
    # ── Logging ────────────────────────────────────────────────────────────
    "loguru>=0.7.3",
]

[project.optional-dependencies]
ml = [
    # ReLiK pins torch==2.3.1, so ML extraction remains opt-in.
    "torch==2.3.1",
    "relik>=1.0.7,<1.1",
    "glirel>=1.2.1",
    "gliner==0.2.22",
    "spacy>=3.7,<4",
    "scikit-learn>=1.5,<1.6",
    "sentence-transformers>=3.0,<4",
]
neo4j = ["neo4j>=5.28,<6"]
dev = [
    "ruff>=0.13.0",
    "basedpyright>=1.34.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[tool.uv]
cache-dir = "../../.uv-cache"

[tool.ruff]
line-length = 100
target-version = "py311"

# ─── PHASE 2 ACTIVATION ─────────────────────────────────────────────────────
#
# The base package is intentionally lightweight and functional without model
# downloads. Optional ML extractors can be installed later:
#
# 1. cd python-backend/kg_pipeline
# 2. uv venv
# 3. uv sync
# 4. Set KG_PIPELINE_ENABLED=true in python-backend/ingestion/.env
# 5. Start: uv run uvicorn kg_pipeline.server:app --port 8099
# 6. Optional ML path later: uv sync --extra ml
#
# ─── Decoupling (D17) ───────────────────────────────────────────────────────
# Same rules as ingestion: MUST NOT import agent.*. Communication via HTTP only.
# NornicDB/nonicdb is the first graph projection target; FalkorDB is not used
# in the first implementation path.
