[package]
name = "tradeviewfusion_rust_core"
version = "0.2.0"
edition = "2021"
exclude = ["kand-rs/"]

[lib]
name = "tradeviewfusion_rust_core"
crate-type = ["cdylib"]

[features]
# default: abi3 wheel (py311+, one wheel for 3.11/3.12/3.13-GIL)
# disable for free-threaded builds: maturin build --no-default-features
default = ["abi3"]
abi3    = ["pyo3/abi3-py311"]
polars  = ["dep:polars-core"]  # Phase C+: optional DataFrame layer (feature-gated)
ml      = ["dep:ort", "dep:linfa"]  # Phase E+: ML inference without Python

[dependencies]
pyo3       = { version = "0.28.2", features = ["extension-module"] }
redb       = "2.6.3"
serde      = { version = "1", features = ["derive"] }  # explicit (was only transitive via serde_json)
serde_json = "1"
thiserror  = "2"
rayon      = "1"  # Phase C: batch indicator parallelisation

# Phase E+: ML inference in Rust (optional, feature-gated)
ort        = { version = "2.0.0-rc.12", optional = true }  # ONNX Runtime — run exported PyTorch/sklearn models (pre-release until v2 stable)
linfa      = { version = "0.7", optional = true }  # Classical ML (HMM, clustering, regression)

[dependencies.polars-core]
version  = "0.46"
optional = true
features = ["lazy"]

[dev-dependencies]
approx = "0.5"
tempfile = "3.23.0"
