[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-voice"
version = "0.1.0"
description = "Voice AI — LiveKit Agents (STT/TTS/LLM-Pipeline)"
requires-python = ">=3.11"
dependencies = []  # erbt shared-base + livekit/whisper/piper aus python-backend/

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["voice*"]
